--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<style>
+    *{
+        color:blueviolet;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    }
+</style>
 <h1>Hola mundo desde Git</h1>
 <p>Este es el taller para aprender y emprender con Git y GitHub</p>
